--- a/registrationForm.html
+++ b/registrationForm.html
@@ -152,7 +152,7 @@
           </div>
           <div class="form-group flex-column d-flex">
             <label class="form-control-label px-3">Password</label>
-            <input type="text" id="loginPassword" name="loginPassword" placeholder="Password" />
+            <input type="text" id="loginPassword" name="loginPassword" placeholder="Password" type='password' />
             <span class="bar"></span>
           </div>
           <div class="row justify-content-center">
@@ -169,8 +169,8 @@
             </div>
             <hr />
             <div class="form-group col-6 mt-4">
-              <button type="button" class="btn col-6 col-md-4" id="btnCreateAccountLinker"
-                style="background-color: #5a3719; color: white; ">
+              <button type="button" class="btn" id="btnCreateAccountLinker"
+                style="background-color: #5a3719; color: white;">
                 Create Account
               </button>
             </div>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="form-group col-sm-6 flex-column d-flex">
                   <label class="form-control-label px-3">Password</label>
-                  <input type="text" id="inputPassword" placeholder="Password" />
+                  <input type="text" id="inputPassword" placeholder="Password" type='password' />
                   <span class="bar"></span>
                 </div>
               </div>
@@ -293,7 +293,7 @@
                 </button>
                 <div>
                   Already have an account?
-                  <button type="button" id="btnReturnLogin" style="background-color: transparent; color: #bc6c25">
+                  <button type="button" id="btnReturnLogin" class="btn" style="background-color: transparent; color: #bc6c25">
                     Log In
                   </button>
                 </div>
@@ -308,8 +308,8 @@
   <!--HOMEPAGE DIV-->
   <div id="divHome" class="container-fluid px-1 mx-auto" style="display: none">
     <div class="row flex-nowrap">
-      <div id="divSideNav" class="col-auto col-md-3 col-xl-2 px-sm-2 px-0" style="background-color: rgba(255, 255, 255, 0.65);;">
-        <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100 navbarPosition">
+      <div id="divSideNav" class="col-auto col-md-3 col-xl-2 px-sm-2 px-0" style="background-color: rgba(255, 255, 255, 0.65);">
+        <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
           <h1 class="fs-4 d-none d-sm-inline" style="color: black;">Chicken Coop</h1>
           <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start " id="menu">
             <li>
@@ -361,11 +361,11 @@
               </div>
               <div class="card col-9 dashCard">
                 <h6>Current Temp:</h6>
-                <h4><span id="txtTempFinal"></span>&#176;</h4>
+                <h4>56°</h4>
               </div>
               <div class="card col-9 dashCard">
                 <h6>Humidity:</h6>
-                <h4><span id="txtHumidFinal"></span>%</h4>
+                <h4>46%</h4>
               </div>
               <div class="card col-9 dashCard">
                 <h6>Cleanout In:</h6>
@@ -396,14 +396,15 @@
                   <div class="card col-12">
                     <span>Coop Door</span>
                     <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text col-4" for="openTimeDoor">Automatic Open Time</label>
-                      <input data-settings="openTimeDoor" id="openTimeDoor" class="col-8 settingClass" type="time" class="form-control"
-                        placeholder="Time" aria-label="Time" aria-describedby="basic-addon2">
+                      <div><label class="input-group-text col-auto text-wrap form-control-label" for="openTimeDoor">Automatic Open Time</label></div>
+                      <div><input data-settings="openTimeDoor" id="openTimeDoor" class="col-6 col-sm-auto settingClass form-control" type="time" 
+                        placeholder="Time" aria-label="Time" aria-describedby="basic-addon2"></div>
+                      
                     </div>
                     <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text col-4" for="closeTimeDoor">Automatic Close Time</label>
-                      <input data-settings="closeTimeDoor" id="closeTimeDoor" class="col-8 settingClass" type="time" class="form-control"
-                        placeholder="Time" aria-label="Time" aria-describedby="basic-addon2">
+                      <div><label class="input-group-text col-auto text-wrap form-control-label" for="closeTimeDoor">Automatic Close Time</label></div>
+                    <div><input data-settings="closeTimeDoor" id="closeTimeDoor" class="col-6 settingClass form-control" type="time" class="form-control"
+                        placeholder="Time" aria-label="Time" aria-describedby="basic-addon2"></div>
                     </div>
                     <div class="row d-flex justify-content-center p-3" style="margin: 0 auto;">
                       <div class="form-check form-switch text-center justify-content-center">
@@ -418,14 +419,14 @@
                   <div class="card col-12">
                     <span>Coop Light</span>
                     <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text col-4" for="onTimeLight">Automatic On Time</label>
-                      <input data-settings="onTimeLight" id="onTimeLight" class="col-8 settingClass" type="time"
-                        class="form-control" placeholder="Time" aria-label="Time" aria-describedby="basic-addon2">
+                      <div><label class="input-group-text col-auto text-wrap form-control-label" for="onTimeLight">Automatic On Time</label></div>
+                      <div><input data-settings="onTimeLight" id="onTimeLight" class="col-6 settingClass form-control" type="time"
+                        class="form-control" placeholder="Time" aria-label="Time" aria-describedby="basic-addon2"></div>
                     </div>
                     <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text col-4" for="offTimeLight">Automatic Off Time</label>
-                      <input data-settings="offTimeLight" id="offTimeLight" class="col-8 settingClass" type="time"
-                        class="form-control" placeholder="Time" aria-label="Time" aria-describedby="basic-addon2">
+                      <div><label class="input-group-text col-auto text-wrap form-control-label" for="offTimeLight">Automatic Off Time</label></div>
+                      <div><input data-settings="offTimeLight" id="offTimeLight" class="col-6 settingClass form-control" type="time"
+                        class="form-control" placeholder="Time" aria-label="Time" aria-describedby="basic-addon2"></div>
                     </div>
                     <div class="row d-flex justify-content-center p-3" style="margin: 0 auto;">
                       <div class="form-check form-switch text-center justify-content-center">
@@ -442,12 +443,12 @@
                   <div class="card col-12">
                     <span>Coop Heater</span>
                     <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text col-4" for="onTempHeater">Heater On Temperature</label>
-                      <input data-settings="onTempHeater" id="onTempHeater" class="col-8 settingClass" type="text" class="form-control"
-                        placeholder="Time" aria-label="Time" aria-describedby="basic-addon2">
+                      <label class="input-group-text col-auto text-wrap form-control-label" for="onTempHeater">Heater On Temp</label>
+                      <input data-settings="onTempHeater" id="onTempHeater" class="col-6 settingClass form-control" type="text"
+                        placeholder="Temp &#xb0" aria-label="Time" aria-describedby="basic-addon2">
                     </div>
                     <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text col-4" for="heaterTimer">Heater Timer</label>
+                      <label class="input-group-text col-auto text-wrap form-control-label" for="heaterTimer">Heater Timer</label>
                       <select class="form-select" aria-label="Default select example">
                         <option selected>Heater Off</option>
                         <option value="1">10 Minutes</option>
@@ -464,12 +465,12 @@
                   <div class="card col-12">
                     <span>Coop Fan</span>
                     <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text col-4" for="onTempFan">Fan On Temperature</label>
-                      <input data-settings="onTempFan" id="onTempFan" class="col-8 settingClass" type="text" class="form-control"
-                        placeholder="Time" aria-label="Time" aria-describedby="basic-addon2">
+                      <label class="input-group-text col-auto text-wrap form-control-label" for="onTempFan">Fan On Temperature</label>
+                      <input data-settings="onTempFan" id="onTempFan" class="col-6 settingClass form-control" type="text" 
+                        placeholder="Temp &#xb0" aria-label="Time" aria-describedby="basic-addon2">
                     </div>
                     <div class="input-group mb-3 justify-content-center">
-                      <label class="input-group-text" for="fanTimer">Fan Timer</label>
+                      <label class="input-group-text col-6" for="fanTimer">Fan Timer</label>
                       <select class="form-select" aria-label="Default select example">
                         <option selected>Fan Off</option>
                         <option value="1">10 Minutes</option>
@@ -486,7 +487,7 @@
               <div class="row row-bottom-margin d-flex p-3">
                 <div class="col-12 d-flex justify-content-center">
                   <button type="button" class="btn" id="btnSaveSettings"
-                    style="background-color: #bc6c25; color: white; width: 80%; height: 80%;">
+                    style="background-color: #bc6c25; color: white;">
                     Save Settings
                   </button>
                 </div>
@@ -803,6 +804,12 @@
           }
         });
       });
+
+      Swal.fire({
+        title: "Success!",
+        icon: "success",
+        html: "Settings Saved!",
+      });
     });
 
     $("#btnNavWarnings").on("click", function () {
@@ -827,8 +834,6 @@
       })
     });
 
-    
-    <!--All Info needed for Graph. -->
     const data = {
       labels: arrDays,
       datasets: [{
@@ -845,14 +850,12 @@
       },
       ]
     };
-
     const config = {
       type: 'line',
       data: data,
       options: {}
     };
-  </script>
-  <script>
+
     const myChart = new Chart(
       document.getElementById('myChart'),
       config
