--- a/registrationForm.html
+++ b/registrationForm.html
@@ -859,7 +859,7 @@
     const myChart = new Chart(
       document.getElementById('myChart'),
       config
-    );
+    ).resize();
   </script>
   <script>
     // Set the date we're counting down to
